style: improve responsiveness and improve searchlist Searchlist will overlap the selected cards display and fix info being out of bounds at lower resolutions for selected card display

--- a/src/components/Game/SelectedDiv/SelectedChecks/SelectedChecks.css
+++ b/src/components/Game/SelectedDiv/SelectedChecks/SelectedChecks.css
@@ -68,11 +68,31 @@
 @media  (max-width: 1200px) {
   .selected-checks-div{
     display: flex;
+    flex-wrap: wrap;
     align-items: center;
     justify-content: space-evenly;
     margin-left: auto;
     margin-right: auto;
     width: 100%;
-    height: 50px;
+    height: 50px
   }
+ }
+
+
+ @media  (max-width: 800px) {
+  .selected-checks-div{
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    margin-left: auto;
+    margin-right: auto;
+    width: 100%;
+    height: auto;
+  }
+   .selected-checks-div > div {
+   height: 40px;
+  
+
+ }
+
  }
